# ed-proj

./: .gitmodules  404.html  CNAME  index.html
.github/workflows/: gh-pages.yaml
about/: index.html
docker/: .env  .env.tasks  docker-compose.yaml  traefik-dynamic.toml  traefik.toml
docs/: mkdocs.yaml  pyproject.toml
docs/docs/: about.md  index.md
docs/docs/guides/: deployment.md  quick-start.md
guides/: index.html
guides/deployment/: index.html
guides/quick-start/: index.html
search/: search_index.json
